# nub

./: .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
bazel/: llvm.MODULE.bazel
cmake/: NubBuild.cmake  NubHelper.cmake
cmake/targets/: NubBin.cmake
include/internal/: BUILD.bazel  nub-platform.h
nub/: BUILD.bazel  bits.h  script.h  string.h
nub/base/: BUILD.bazel  bits.h  macro.h
nub/chars/: BUILD.bazel  string.h
nubx/: BUILD.bazel
src/: BUILD.bazel  CMakeLists.txt
src/base/: BUILD.bazel  bits.h  platform.h
src/nub/: BUILD.bazel  CMakeLists.txt
src/nub_common/: CMakeLists.txt
src/nub_source/: script.h
