load("@rules_rust//rust:defs.bzl", "rust_library", "rust_binary")

rust_library(
    name = "nub",
    edition = "2024",
    srcs = ["@nub//nub:srcs"],
    deps = [
        "@nub//deps:simdutf_bindgen",
    ]
)

rust_binary(
    name = "nubx",
    edition = "2024",
    srcs = ["@nub//nubx:srcs"],
    deps = [
        "@nub//:nub",
    ],
)