module(name = "nub")

bazel_dep(name = "rules_cc", version = "0.2.18")

bazel_dep(name = "rules_foreign_cc")
git_override(
    module_name = "rules_foreign_cc",
    remote = "https://github.com/bazel-contrib/rules_foreign_cc.git",
    commit = "006ae82d9b4953a9b1c170827aef660f9f0f9ec0"
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/ultimateanu/bazel-compile-commands-extractor.git",
    commit = "2dc498f24587eccc2752f8a892da004d9baa8318",
)