module(name = "nub")

# Install Rust rules for building the project
bazel_dep(name = "rules_rust", version = "0.70.0")

# Install Rust bindgen for generating vendored bindings
bazel_dep(name = "rules_rust_bindgen", version = "0.70.0")
register_toolchains("@rules_rust_bindgen//:default_bindgen_toolchain")

# Install LLVM for bindgen to work
bazel_dep(name = "toolchains_llvm", version = "1.7.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "21.1.8")

use_repo(llvm, "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain_llvm//:all")

# Install rules for building vendored projects
bazel_dep(name = "rules_foreign_cc")
git_override(
    module_name = "rules_foreign_cc",
    remote = "https://github.com/bazel-contrib/rules_foreign_cc.git",
    commit = "006ae82d9b4953a9b1c170827aef660f9f0f9ec0"
)
